hosted own photo, removed double scrolling and moved fixed credits to the bottom

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ main {
 	float:left;
 	margin-left: 50px;
 	height:400px;
-	width:400px;
+	width:auto;
 	font-size: 4em;
 }
 .about-text-box {
@@ -192,21 +192,21 @@ main {
 }
 /*******************Blog Panel*************************************/
 .blog-panel {
-	height: 50rem;
+	height: auto;
 }
 
 .blog {
 	color: white;
-	height: 550px;
+	height: auto;
 	width: 50%;
-	overflow: scroll;
+	/*overflow: scroll;*/
 	margin-right:auto;
 	margin-left:auto;
 }
 .each-blog {
 
 	width: 100%;
-	border-bottom: 2px solid white;
+/*	border-bottom: 2px solid white;*/
 	
 }
 
@@ -218,8 +218,8 @@ main {
 	background-repeat:no-repeat;
 	/*color:rgba(8, 11, 39, 1);*/
 	color:white;
-	margin-bottom: 6rem;
-	overflow: scroll;
+	/*margin-bottom: 6rem;*/
+	/*overflow: scroll;*/
 }
 
 
@@ -280,30 +280,30 @@ main {
 
 
 .footer {
-	position: fixed;
+/*	position: fixed;*/
 	width:100%;
 	height: 5rem;
 	background: #fff;
 	bottom:0;
 	font-style: italic;
 	font-size: .7rem;
-	transition: background-color 1.5s ease,
-				color 1.5s ease-in-out;
+/*	transition: background-color 1.5s ease,
+				color 1.5s ease-in-out;*/
 }
 .footer a {
 	color: rgba(8, 11, 39, 1);
 	text-decoration: underline;
-	transition: color 1.5s ease-in-out;
+/*	transition: color 1.5s ease-in-out;*/
 }
 
-.footer:hover {
+/*.footer:hover {
 	background:black;
 	color:white;
 }
 .footer:hover a {
 	color:white;
 }	
-
+*/
 
 
 
